sonar reports fixed